# libhid-io

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
lib/hid-io/: command.c  command.h  guards.h  hid-io.h  hid-io.h.in  io.h  libhid-io.ver  packet.c  packet.h
tests/: check_command.c  check_io.c  check_libhid-io.c  check_packet.c  tests.c
